player page in progress fixing horizontal scroll

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -209,10 +209,65 @@
 /* PLAYER PAGE */
 .player-container{
   display: grid;
-  grid-template-rows: repeat(3, 200px);
-  grid-gap: 20px;
+  grid-template-rows: repeat(4, 50px 150px);
 }
 
-.player-section{
-  grid-column: 1 / -1;
+.player-section-header {
+  color: #66fcf1;
+  display: grid;
+  align-items: center;
+  justify-items: center;
 }
+
+.player-section {
+  display: grid;
+  overflow-x: scroll;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: minmax(120px,1fr);
+  align-items: center;
+  justify-items: center;
+}
+
+.player-box-con{
+  display: grid;
+  grid-template-rows: 120px 30px;
+  grid-template-columns: max-content;
+  align-items: center;
+  justify-items: center;
+}
+
+.player-box-con img {
+  height: 120px;
+  width: 94.28px;
+}
+
+.player-box-con span {
+  color: #66fcf1;
+}
+/* HEADER */
+.defpos{
+  grid-area: 1 / 1 / 2 / 2;
+}
+/* HEADER */
+.midpos{
+  grid-area: 3 / 1 / 4 / 2;
+}
+/* HEADER */
+.forpos{
+  grid-area: 5 / 1 / 6 / 2;
+}
+/* CONTENT */
+.defender {
+  grid-area: 2 / 1 / 3 / 2;
+}
+/* CONTENT */
+.midfield {
+  grid-area: 4 / 1 / 5 / 2;
+}
+/* CONTENT */
+.forward {
+  grid-area: 6 / 1 / 7 / 2;
+}
+
+
